--- a/values.yaml
+++ b/values.yaml
@@ -6,53 +6,44 @@ replicaCount: 1
 
 image:
   registry: example.registry.com:5678
-  pullPolicy: Always
-  repository: tinode/tinode
-  tag: 0.20.0
+  pullPolicy: IfNotPresent
+  repository: containers/tinode
+  tag: latest
 
 imagePullSecrets:
   - name: "pullSecret-registry"
 
-cloudIngress: "k8s-cloud.example.com"
+smtp:
+  enabled: true
+  emailValidationRequired: false
+  auth:
+    enabled: false
+    authMechanism: "login"
+    login: "user-login"
+    #existingSecret: ""            # need: SMTP_PASSWORD env
+  server: "smtp.example.com"
+  port: "25"
+  sender: "noreply@example.com"
 
-# Default listen on 0.0.0.0:6060
-listenAddress: ""
-listenPort: 6060
-
-# Use adapter depends on your database (see supported adapters)
+# Use adapter depends on your database (see supported adapters):
 storeUseAdapter: "mongodb"
+mongodb:
+  enabled: true
+  uri: ""
+  addresess:
+    - "mongo.example.com:1529"
+  database: "tinode"
 
-extraEnvVars:
-  - name: MONGODB_ADDRESS
-    value: "192.168.0.1:5050"
-  - name: MONGODB_DB
-    value: "tinode"
-  - name: MONGODB_SKIP_TLS_VERIFY
-    value: 'true'
-  - name: MONGODB_TLS_ENABLED
-    value: 'false'
+  auth:
+    enabled: true
+    authMechanism: ""
+    authSource: ""
+    #existingSecret: "" # need: TINODE_MONGODB_USERNAME/TINODE_MONGODB_PASSWORD
 
-smtpConfigurationEnv:
-  # Set empty to disable email validation.
-  EMAIL_VERIFICATION_REQUIRED: "auth"
-  # Address of the SMPT server to use.
-  SMTP_SERVER: "smtp.example.com"
-  # SMTP port to use. "25" for basic email RFC 5321 (2821, 821), "587" for RFC 3207 (TLS).
-  SMTP_PORT: "25"
-  # Optional login to use for authentication; if missing, the connection is not authenticated.
-  SMTP_LOGIN: ""
-  #  RFC 5322 email address to show in the From: field.
-  SMTP_SENDER: "noreply@example.com"
-  # Missing or empty list means any email domain is accepted.
-  SMTP_DOMAINS: ""
-  # Dummy response to accept. REMOVE IT IN PRODUCTION!!! Otherwise anyone will be able to register
-  DEBUG_EMAIL_VERIFICATION_CODE: ""
+  tlsEnabled: false
+  tlsSkipVerify: true
 
-secrets:
-  MONGODB_USERNAME: ""
-  MONGODB_PASSWORD: ""
-# Password to use when authenticating the sender; used only if "login" is provided.
-  SMTP_PASSWORD: ""
+extraEnvVars: {}
 
 serviceAccount:
   create: false
@@ -67,23 +58,37 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  app: 6060
+  grpc: 16060
 
 ingress:
   enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
   hosts:
-    - host: chart-example.local
+    - host: tinode.k8s-cloud.example.com
       paths:
-        - path: /
-          pathType: ImplementationSpecific
+        path: /
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
+
+ingress-grpc:
+  enabled: true
+  annotations:
+      kubernetes.io/ingress.class: nginx
+      nginx.ingress.kubernetes.io/ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
+  hosts:
+    - host: tinode.grpc.k8s-cloud.example.com
+      paths:
+         path: /
+  tls: []
+#    - secretName: chart-example-tls
+#      hosts:
+#        - chart-example.local
 
 resources:
   limits:
